merge part kolejny